--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,15 @@
+@import url(//db.onlinewebfonts.com/c/060e116a70e3096c52db16f61aaab194?family=Sofia+Pro);
+                
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: serif;
   background-color: black;
+  
+font-family: "Sofia Pro";
+/*font-family: 'Poppins', sans-serif;*/
+                                                
 }
 
 a {
