adding the Mediation Application App + some responsiveness of the LP

--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -3,4 +3,13 @@
   width: 100%;
   max-width: 90em;
   color: white;
+  height:100%;
+  
+  @media screen and (min-width: 280px) and (max-width: 1080px){
+    
+    overflow-x: hidden;
+    height:100%;
+  }
+
+  
 }
