--- a/styles/Home.css
+++ b/styles/Home.css
@@ -1,3 +1,30 @@
+@import url(//db.onlinewebfonts.com/c/060e116a70e3096c52db16f61aaab194?family=Sofia+Pro);
+                
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* .container {
   padding: 0 2rem;
 }
